<resources>
    <string name="app_name">Appetite</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Levi Kamara</string>
    <string name="nav_header_subtitle">levi.zwannah@strathmore.edu</string>
    <string name="nav_header_desc">Appetite Logo</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_budget">My budget</string>
    <string name="menu_fav">Favourites</string>
    <string name="menu_new_dish">Add dish</string>
    <string name="menu_dishes">Dishes</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="register_with_us">Register with us</string>
    <string name="web_client_id">808495759464-84cp20jgtvagph2klfhlj9al3l6ce87s.apps.googleusercontent.com</string>
    <string name="sign_out">Sign out</string>
    <string name="click_to_add_image">Click to add image</string>
    <string name="add_a_dish">Add a dish</string>
    <string name="name_of_dish">Name of dish</string>
    <string name="price">Price</string>
    <string name="has_mini">Has mini</string>
    <string name="kes">KES</string>
    <string name="generate">Generate</string>
    <string name="dishes">Dishes</string>
    <string name="desc_sample">Animal protein, rich in omega 3. Orginates from the lake.</string>

    <string-array name="food_types">
        <item>Carbohydrate</item>
        <item>Protein</item>
        <item>Vitamin</item>
        <item>Drink</item>
    </string-array>

</resources>