<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_budget"
            android:icon="@drawable/ic_dollar"
            android:title="@string/menu_budget" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_fav" />
        <item
            android:id="@+id/nav_new_dish"
            android:icon="@drawable/ic_add"
            android:title="@string/menu_new_dish" />
        <item
            android:id="@+id/nav_dishes"
            android:icon="@drawable/ic_fork_n_knife"
            android:title="@string/menu_dishes" />
        <item android:title="@string/profile">
            <menu>
                <item
                    android:id="@+id/editprofile"
                    android:checkable="true"
                    android:icon="@drawable/ic_editprofile"
                    android:title="@string/edit_profile" />
                <item
                    android:id="@+id/change_password"
                    android:checkable="true"
                    android:icon="@drawable/ic_changepassword"
                    android:title="@string/change_password" />
                <item
                    android:id="@+id/logout"
                    android:checkable="true"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout" />
            </menu>
        </item>
    </group>

</menu>